Fix SyntaxWarning in literal comparison

--- a/Session_3/2a_boolean_generator_gui.ipynb
+++ b/Session_3/2a_boolean_generator_gui.ipynb
@@ -67,16 +67,16 @@
     "    \n",
     "    logic = []\n",
     "    for i in [logic0.value, logic1.value, logic2.value]:\n",
-    "        if i is 'AND' :\n",
+    "        if i == 'AND' :\n",
     "            logic.append('&')\n",
-    "        elif i is 'OR' :\n",
+    "        elif i == 'OR' :\n",
     "            logic.append('|')\n",
-    "        elif i is 'XOR' :\n",
+    "        elif i == 'XOR' :\n",
     "            logic.append('^')\n",
     "    \n",
     "    inputs = []\n",
     "    for i in [input0.value, input1.value, input2.value, input3.value]:\n",
-    "        if i is not '-' :\n",
+    "        if i != '-' :\n",
     "            i = i.replace(\"NOT \", \"~\") \n",
     "            inputs.append(i)\n",
     "            \n",
